# business-data-science

./: .gitignore  README.md  justfile
courses/business-statistics/: README.md  pyproject.toml
courses/business-statistics/case_study/: Insurance Case Study (Two proportions z-test)-1.ipynb  Medicon_Case_Study.ipynb  Mircrosoft_Stock_Price_Case_Study.ipynb  Mobile_Internet_Case_Study.ipynb  NEP Case Study (Chi-Square test of independence)-1.ipynb  Titan_Insurance_Case_Study.ipynb
courses/business-statistics/project/: README.md  enews_express.html  enews_express.py  faq.md  problem_statement.md  submission_guidelines.md
courses/machine-learning-basics/: README.md  pyproject.toml
courses/machine-learning-basics/case_study/: MLS1_Machine_Failure_Prediction.ipynb  Session_Notebook_MLS_2_WHO_Case_Study.ipynb
courses/machine-learning-basics/project/: ML2_INN_Full_code_Learner_notebook.ipynb  ML2_INN_Low_Code_Learner_notebook.ipynb  faq.md  inn_hotels.py  problem_statement.md  submission_guidelines.md
courses/math-statistics/: README.md
docs/: data-and-deliverables-policy.md  repo-architecture.md
templates/course-template/: README.md  pyproject.toml
utils/: eda_utils.py  model_utils.py  stats_utils.py
