[project]
name = "business-statistics"
version = "0.1.0"
description = "Business Statistics: E-news Express A/B testing project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "marimo",
  "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
  "ruff",
]
