[project]
name = "machine-learning-basics"
version = "0.1.0"
description = "Machine Learning Basics: KNN, Naive Bayes, SVM. INN Hotels project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "marimo",
  "jinja2",
]

[dependency-groups]
dev = [
  "ruff",
]
