[project]
name = "course-template"
version = "0.1.0"
description = "Academic data science course project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "marimo",
]

[dependency-groups]
dev = [
  "ruff",
]
